--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -12,8 +12,8 @@
                             <label class="col-sm-3 control-label text-right" for="theater">劇場<font color="red">＊</font></label>
                             <div class="col-sm-9 form-inline">
                                 <select class="form-control" name="theater">
-                                    <% if (user.permission.movieTheaters.length === 0) { %>
-                                        <option value="<%= user.permission.movieTheaters.length %>" disabled selected>選択してください</option>
+                                    <% if (user.cognitoGroups.movieTheaters.length === 0) { %>
+                                        <option value="<%= user.cognitoGroups.movieTheaters.length %>" disabled selected>選択してください</option>
                                         <% for (const movieTheater of movieTheaters) { %>
                                         <option value="<%= movieTheater.branchCode %>" data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
                                             data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
@@ -22,7 +22,7 @@
                                         </option>
                                         <% } %>
                                     <% } else { %>
-                                        <% for (const movieTheater of user.permission.movieTheaters) { %>
+                                        <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
                                             <option value="<%= movieTheater.branchCode %>" data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
                                                 data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
                                                 data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
