--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -5,7 +5,7 @@
             <li class="<%= (displayId === 'Aa-12') ? 'active': ''; %>"><a href="/places/movieTheater">
                     <i class="glyphicon glyphicon-list"></i> 劇場検索</a>
             </li>
-            <% if (user.permission.movieTheaters.length === 0) { %>
+            <% if (user.cognitoGroups.movieTheaters.length === 0) { %>
             <li class="<%= (displayId === 'Aa-9') ? 'active': ''; %>"><a href="/creativeWorks/movie/add">
                     <i class="glyphicon glyphicon-plus"></i> 作品登録</a>
             </li>
@@ -53,7 +53,7 @@
             <li class="<%= (displayId === 'AT-01') ? 'active': ''; %>"><a href="/accountTitles">
                     <i class="glyphicon glyphicon-list"></i> 細目検索</a>
             </li>
-            <% if (user.permission.movieTheaters.length === 0) { %>
+            <% if (user.cognitoGroups.movieTheaters.length === 0) { %>
             <li class="<%= (displayId === 'Aa-18') ? 'active': ''; %>"><a href="/serviceTypes/add">
                     <i class="glyphicon glyphicon-plus"></i> 興行区分登録</a>
             </li>
