--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -9,12 +9,14 @@
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group form-inline">
-                            <label class="col-sm-3 control-label text-right" for="theater">劇場<font color="red">＊</font></label>
+                            <label class="col-sm-3 control-label text-right" for="theater">劇場<font color="red">＊</font>
+                            </label>
                             <div class="col-sm-9 form-inline">
                                 <select class="form-control" name="theater">
                                     <option value="" disabled selected>選択してください</option>
                                     <% for (const movieTheater of movieTheaters) { %>
-                                    <option value="<%= movieTheater.branchCode %>" data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
+                                    <option value="<%= movieTheater.branchCode %>"
+                                        data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
                                         data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
                                         data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
                                         <%= movieTheater.name.ja %>
@@ -24,7 +26,8 @@
                             </div>
                         </div>
                         <div class="form-group form-inline">
-                            <label class="col-sm-3 control-label text-right" for="screen">作品<font color="red">＊</font></label>
+                            <label class="col-sm-3 control-label text-right" for="screen">作品<font color="red">＊</font>
+                            </label>
                             <div class="col-sm-9 form-inline">
                                 <select class="form-control" name="screeningEventSeriesId">
                                     <option value="">劇場を選択してください</option>
@@ -32,7 +35,8 @@
                             </div>
                         </div>
                         <div class="form-group form-inline">
-                            <label class="col-sm-3 control-label text-right" for="screen">スクリーン<font color="red">＊</font></label>
+                            <label class="col-sm-3 control-label text-right" for="screen">スクリーン<font color="red">＊
+                                </font></label>
                             <div class="col-sm-9">
                                 <select class="form-control" name="screen">
                                     <option value="">劇場を選択してください</option>
@@ -42,37 +46,45 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label text-right">登録期間<font color="red">＊</font></label>
                             <div class="col-sm-9 form-inline">
-                                <input class="form-control datepicker" name="screeningDateStart" placeholder="YYYY/MM/DD"
-                                    maxlength=10>
+                                <input class="form-control datepicker" name="screeningDateStart"
+                                    placeholder="YYYY/MM/DD" maxlength=10>
                                 〜
-                                <input class="form-control datepicker" name="screeningDateThrough" placeholder="YYYY/MM/DD"
-                                    maxlength=10>
+                                <input class="form-control datepicker" name="screeningDateThrough"
+                                    placeholder="YYYY/MM/DD" maxlength=10>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-3 control-label text-right">曜日<font color="red">＊</font></label>
                             <div class="col-sm-9 form-inline">
-                                <label class="checkbox-inline"><input type="checkbox" value="1" name="weekDay" checked>月</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="2" name="weekDay" checked>火</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="3" name="weekDay" checked>水</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="4" name="weekDay" checked>木</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="5" name="weekDay" checked>金</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="6" name="weekDay" checked>土</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="0" name="weekDay" checked>日</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="1" name="weekDay"
+                                        checked>月</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="2" name="weekDay"
+                                        checked>火</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="3" name="weekDay"
+                                        checked>水</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="4" name="weekDay"
+                                        checked>木</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="5" name="weekDay"
+                                        checked>金</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="6" name="weekDay"
+                                        checked>土</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="0" name="weekDay"
+                                        checked>日</label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-3 control-label text-right" for="onlineDisplayStartDate">オンライン表示開始日</label>
+                            <label class="col-sm-3 control-label text-right"
+                                for="onlineDisplayStartDate">オンライン表示開始日</label>
                             <div class="col-sm-9 form-inline">
-                                <input class="form-control datepicker" name="onlineDisplayStartDate" placeholder="YYYY/MM/DD"
-                                    maxlength=10>
+                                <input class="form-control datepicker" name="onlineDisplayStartDate"
+                                    placeholder="YYYY/MM/DD" maxlength=10>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-3 control-label text-right">座席指定<font color="red">＊</font></label>
                             <div class="col-sm-9 form-inline">
-                                <label class="checkbox-inline"><input type="checkbox" value="1" name="reservedSeatsAvailable"
-                                        checked>座席指定あり</label>
+                                <label class="checkbox-inline"><input type="checkbox" value="1"
+                                        name="reservedSeatsAvailable" checked>座席指定あり</label>
                             </div>
                         </div>
                         <table class="table table-bordered">
