--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -74,8 +74,8 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label" for="onlineDisplayStartDate">オンライン表示開始日</label>
                             <div class="col-sm-9 form-inline">
-                                <input class="form-control datepicker" name="onlineDisplayStartDate" placeholder="YYYY/MM/DD"
-                                    maxlength=10>
+                                <input class="form-control datepicker" name="onlineDisplayStartDate"
+                                    placeholder="YYYY/MM/DD" maxlength=10>
                             </div>
                         </div>
                         <div class="form-group">
@@ -89,7 +89,8 @@
                             </label>
                             <div class="col-sm-9">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="mvtkExcludeFlg" value="1" id="mvtkExcludeFlg">
+                                    <input class="form-check-input" type="checkbox" name="mvtkExcludeFlg" value="1"
+                                        id="mvtkExcludeFlg">
                                     <label class="form-check-label" for="mvtkExcludeFlg">
                                         ムビチケ対象外
                                     </label>
@@ -101,8 +102,11 @@
                             </label>
                             <div class="col-sm-9">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="reservedSeatsAvailable" value="1"
-                                        id="reservedSeatsAvailable">
+                                    <input disabled class="form-check-input" type="checkbox"
+                                        name="reservedSeatsAvailableDisabled" value="1"
+                                        id="reservedSeatsAvailableDisabled">
+                                    <input type="hidden" value="1" name="reservedSeatsAvailable">
+
                                     <label class="form-check-label" for="reservedSeatsAvailable">
                                         座席指定あり
                                     </label>
