--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -22,7 +22,8 @@ Aa-4
             </div>
             <div class="form-group">
                 <label>上映日</label>
-                <input autocomplete="off" class="form-control datepicker" name="date" placeholder="選択してください" maxlength=10>
+                <input autocomplete="off" class="form-control datepicker" name="date" placeholder="選択してください"
+                    maxlength=10>
             </div>
         </div><br>
         <div class="form-row">
@@ -41,6 +42,13 @@ Aa-4
                     <option value="">劇場を選択してください</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label></label>
+                <input class="form-check-input" type="checkbox" name="onlyReservedSeatsAvailable"
+                    id="onlyReservedSeatsAvailable" value="1">
+                <label class="form-check-label" for="onlyReservedSeatsAvailable">座席指定有のみ</label>
+            </div>
+
             <button class="btn btn-default search-button">検索</button>
         </div>
     </form>
