--- a/views/accountTitles/accountTitleSet/form.ejs
+++ b/views/accountTitles/accountTitleSet/form.ejs
@@ -52,11 +52,11 @@
         </p>
     </div>
 </div>
-<div class="form-group">
-    <label for="inDefinedTermSet[termCode]" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="inDefinedTermSet[termCode]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         科目区分コード<font color="red">＊</font>
     </label>
-    <div class="col-sm-9">
+    <div class="col-sm-8">
         <input class="form-control" name="inDefinedTermSet[termCode]" id="inDefinedTermSet[termCode]" placeholder=""
             maxlength=64 value="<%= forms.inDefinedTermSet.termCode %>">
         <p class="message">半角64文字以内でご入力ください。</p>
@@ -67,11 +67,11 @@
         </p>
     </div>
 </div>
-<div class="form-group">
-    <label for="inDefinedTermSet[name]" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="inDefinedTermSet[name]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         科目区分名<font color="red">＊</font>
     </label>
-    <div class="col-sm-9">
+    <div class="col-sm-8">
         <input class="form-control" name="inDefinedTermSet[name]" id="inDefinedTermSet[name]" placeholder=""
             maxlength=64 value="<%= forms.inDefinedTermSet.name %>">
         <p class="message">64文字以内でご入力ください。</p>
