--- a/views/accountTitles/form.ejs
+++ b/views/accountTitles/form.ejs
@@ -58,14 +58,14 @@
     </div>
 </div>
 
-<div class="form-group">
-    <label for="name" class="col-sm-3 control-label label-title">
+<div class="form-group row">
+    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         追加項目<font color="red">＊</font>
     </label>
-    <div class="col-sm-9">
+    <div class="col-sm-8">
         <% forms.additionalProperty.forEach(function (_, key) { %>
         <div class="input-group">
-            <span class="input-group-addon">Name:Value</span>
+            <!-- <span class="input-group-addon">Name:Value</span> -->
             <input class="form-control" name="additionalProperty[<%= key %>][name]"
                 id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
                 value="<%= (forms.additionalProperty[key] !== undefined) ? forms.additionalProperty[key].name : '' %>">
