### Changed - 予約検索を調整

--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -76,10 +76,11 @@ Aa-11
                         <br>
                     </td>
                     <td
-                        name="reservedTicket.ticketType.name.ja__reservedTicket.ticketType.price__reservedTicket.ticketedSeat.seatSection__reservedTicket.ticketedSeat.seatNumber">
-                        $reservedTicket.ticketType.name.ja$<br> $reservedTicket.ticketType.price$ JPY<br>
-                        $reservedTicket.ticketedSeat.seatSection$
-                        <br> $reservedTicket.ticketedSeat.seatNumber$
+                        name="reservedTicket.ticketType.name.ja__unitPriceSpec.price__unitPriceSpec.referenceQuantity.value__unitPriceSpec.priceCurrency__ticketedSeat">
+                        $reservedTicket.ticketType.name.ja$<br>
+                        $unitPriceSpec.price$ / $unitPriceSpec.referenceQuantity.value$
+                        $unitPriceSpec.priceCurrency$<br>
+                        $ticketedSeat$
                     </td>
                     <td name="underName.typeOf__underName.name">
                         <span class="badge badge-secondary">$underName.typeOf$</span><br> $underName.name$
