--- a/views/common/errorMessage.ejs
+++ b/views/common/errorMessage.ejs
@@ -1,8 +1,9 @@
 <% if (message !== '') { %>
-<div class="alert alert-danger alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-    <h5>
-        <i class="icon fa fa-exclamation-triangle"></i> Warning!</h5>
-    <%= message %>
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <h4 class="alert-heading lead font-weight-bold mb-2"><i class="icon fa fa-exclamation-triangle"></i> Warning!</h4>
+    <p><%= message %></p>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 <% } %>
