--- a/views/common/successMessage.ejs
+++ b/views/common/successMessage.ejs
@@ -1,8 +1,9 @@
 <% if (messages.message) { %>
-<div class="alert alert-success alert-dismissible">
-    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-    <h5>
-        <i class="icon fa fa-check"></i> Congraturations!</h5>
-    <%= messages.message %>
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    <h4 class="alert-heading lead font-weight-bold mb-2"><i class="icon fa fa-check"></i> Congraturations!</h4>
+    <p><%= messages.message %></p>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 <% } %>
