--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -9,41 +9,45 @@ Aa-17
 <script src="/js/master/commonMaster.js"></script>
 <script src="/js/master/commonMasterList.js"></script>
 <script src="/js/master/serviceTypes/list.js"></script>
+
 <%- contentFor('body') %>
+
 <div class="form-container search mb-3">
     <form method="post" class="p-3 bg-light-gray">
         <%- include('../common/master/_hidden') %>
         <div class="menu-group">
-            <% if (filmModel.message !== undefined) { %>
+            <% if (message !== '') { %>
             <p class="error message text-danger panel-body bg-danger">
-                <%= filmModel.message %>
+                <%= message %>
             </p>
             <% } %>
         </div>
+
         <div class="form-group row">
             <label for="identifier" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                 興行区分コード
             </label>
             <div class="col-md-8">
-                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64
-                    value="<%= filmModel.id %>">
+                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value="">
             </div>
         </div>
+
         <div class="form-group row">
             <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                 名称
             </label>
             <div class="col-md-8">
-                <input class="form-control" name="name" id="name" placeholder="" maxlength=64
-                    value="<%= filmModel.name %>">
+                <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="">
             </div>
         </div>
+
         <div class="panel-body">
             <button type="button" class="btn btn-ok search btn-primary">検索する</button>
             <button type="button" class="reset-condition btn btn-danger">検索内容リセット</button>
         </div>
     </form>
 </div>
+
 <div class="form-container search">
     <div>
         <p class="mb-3" id="searchedCount" style="display:none;">
@@ -67,7 +71,8 @@ Aa-17
                     </td>
                     <td name="edit" class="center">
                         <div class="btn-area">
-                            <button type="button" class="btn btn-list btn-primary edit" data-toggle="modal" data-target="#myModal">
+                            <button type="button" class="btn btn-list btn-primary edit" data-toggle="modal"
+                                data-target="#myModal">
                                 <i class="fas fa-edit"></i>
                             </button>
                         </div>
@@ -78,4 +83,5 @@ Aa-17
     </div>
     <div id="pager" class="div_pager_parent"></div>
 </div>
+
 <%- include('../common/master/_loading') %>
