### Changed - 劇場上映作品検索を拡張

--- a/views/accountTitles/edit.ejs
+++ b/views/accountTitles/edit.ejs
@@ -19,10 +19,8 @@ AT-04
         <%- include('form', { forms: forms, isNew: false }) %>
 
         <% /* 更新ボタン */ %>
-        <div class="form-group row">
-            <div class="btn-area panel-body">
-                <a class="btn btn-ok btn-primary">更新する</a>
-            </div>
+        <div class="btn-area panel-body">
+            <button type="button" class="btn btn-ok btn-primary">更新する</button>
         </div>
     </form>
 </div>
