--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -102,7 +102,7 @@ AT-01
                     <td name="inCodeSet.inDefinedTermSet.termCode">$inCodeSet.inDefinedTermSet.termCode$</td>
                     <td name="inCodeSet.inDefinedTermSet.name">$inCodeSet.inDefinedTermSet.name$</td>
                     <td name="" class="center">
-                        <a href="#" class="btn showAdditionalProperty" data-codeValue="$codeValue$">
+                        <a href="#" class="btn btn-sm btn-primary showAdditionalProperty" data-codeValue="$codeValue$">
                             <span>追加項目を見る</span>
                         </a>
                     </td>
