--- a/views/events/screeningEventSeries/edit.ejs
+++ b/views/events/screeningEventSeries/edit.ejs
@@ -20,10 +20,8 @@ Aa-2
         <%- include('form', { forms: forms }) %>
 
         <% /* 更新ボタン */ %>
-        <div class="form-group row">
-            <div class="btn-area panel-body">
-                <a class="btn btn-ok btn-primary">更新する</a>
-            </div>
+        <div class="btn-area panel-body">
+            <button type="button" class="btn btn-ok btn-primary">更新する</button>
         </div>
     </form>
 </div>
