--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -97,8 +97,7 @@ Aa-11
                     <th>発券<br>入場</th>
                     <th>イベント</th>
                     <th>チケット</th>
-                    <th>ホルダー</th>
-                    <!-- <th></th> -->
+                    <th>チケット<br>ホルダー</th>
                 </tr>
             </thead>
             <tbody>
