--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -9,12 +9,15 @@ Aa-12
 <script src="/js/master/commonMaster.js"></script>
 <script src="/js/master/commonMasterList.js"></script>
 <script src="/js/master/places/movieTheaterList.js"></script>
+
 <%- contentFor('body') %>
+
 <div class="form-container search p-3 bg-light-gray mb-3">
     <form method="post">
         <%- include('../../common/master/_hidden') %>
         <div class="menu-group">
         </div>
+
         <div class="form-group row">
             <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                 名称
@@ -23,12 +26,14 @@ Aa-12
                 <input class="form-control" name="name" id="name" placeholder="" maxlength=64>
             </div>
         </div>
+
         <div>
             <button type="button" class="btn btn-ok search btn-primary">検索する</button>
             <button type="button" class="reset-condition btn btn-danger">検索内容リセット</button>
         </div>
     </form>
 </div>
+
 <div class="form-container search">
     <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果 $searched_count$件
@@ -46,8 +51,10 @@ Aa-12
                 </tr>
             </thead>
             <tbody>
-                <tr id="templateRow" identifier="$identifier$">
-                    <td name="branchCode">$branchCode$</td>
+                <tr id="templateRow" identifier="">
+                    <td name="branchCode__branchCode"><a target="_blank"
+                            href="/places/movieTheater/$branchCode$/update">$branchCode$</a>
+                    </td>
                     <td name="name.ja__name.en__kanaName">
                         $name.ja$<br>
                         $name.en$<br>
