--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -72,10 +72,10 @@ Aa-6
         <table class="table table-bordered table-striped mb-0">
             <thead>
                 <tr>
-                    <th>券種コード</th>
-                    <th>サイト表示用券種名<br>管理用券種名</th>
-                    <th>発生金額(円)<br>売上金額(円)</th>
-                    <th>購入席単位</th>
+                    <th>券種コード<br>種別<br>在庫</th>
+                    <th>名称<br>English Name<br>管理用券種名</th>
+                    <th>発生金額<br>売上金額</th>
+                    <th>適用単位<br>適用最小数<br>適用最大数</th>
                     <th>対応ムビチケ券種区分</th>
                     <th></th>
                     <th></th>
@@ -83,25 +83,39 @@ Aa-6
             </thead>
             <tbody>
                 <tr id="templateRow" _id="$id$">
-                    <td name="ticketCode">$ticketCode$</td>
-                    <td name="name.ja__alternateName.ja">$name.ja$<br>$alternateName.ja$</td>
-                    <td name="priceSpecification.price__priceSpecification.accounting.accountsReceivable"
+                    <td name="id__id__categoryName__availability">
+                        <p>
+                            <a target="_blank" href="/ticketTypes/$id$/update">
+                                $id$
+                            </a>
+                        </p>
+                        <p>$categoryName$</p>
+                        <p class="badge badge-secondary">$availability$</p>
+                    <td name="name.ja__name.en__alternateName.ja">$name.ja$<br>$name.en$<br>$alternateName.ja$</td>
+                    <td name="priceSpecification.price__priceSpecification.priceCurrency__priceSpecification.accounting.accountsReceivable__priceSpecification.priceCurrency"
                         style="text-align:right;">
-                        $priceSpecification.price$<br>$priceSpecification.accounting.accountsReceivable$</td>
-                    <td name="priceSpecification.referenceQuantity.value">$priceSpecification.referenceQuantity.value$
+                        $priceSpecification.price$
+                        $priceSpecification.priceCurrency$<br>$priceSpecification.accounting.accountsReceivable$
+                        $priceSpecification.priceCurrency$
+                    </td>
+                    <td name="referenceQuantity.value__referenceQuantity.minValue__referenceQuantity.maxValue">
+                        <p>$referenceQuantity.value$
+                            <br>$referenceQuantity.minValue$
+                            <br>$referenceQuantity.maxValue$</p>
                     </td>
                     <td name="priceSpecification.appliesToMovieTicketType">$priceSpecification.appliesToMovieTicketType$
                     </td>
                     <td name="edit" class="center">
                         <div class="btn-area text-center">
-                            <a class="btn btn-primary btn-list edit" href="/ticketTypes/$id$/update">
+                            <a target="_blank" class="btn btn-primary btn-list edit" href="/ticketTypes/$id$/update">
                                 <i class="fas fa-edit"></i>
                             </a>
                         </div>
                     </td>
                     <td name="popup" class="center popupListTicketTypeGroup">
                         <div class="btn-area text-center">
-                            <a href="/ticketTypes/getTicketTypeGroupList/$id$" class="btn btn-sm btn-primary btn-list edit">
+                            <a href="/ticketTypes/getTicketTypeGroupList/$id$"
+                                class="btn btn-sm btn-primary btn-list edit">
                                 関連券種<br>グループ
                             </a>
                         </div>
