--- a/views/ticketType/update.ejs
+++ b/views/ticketType/update.ejs
@@ -8,22 +8,22 @@ Aa-5
 <script src="/js/tinycolor-min.js"></script>
 <script src="/js/bootstrap.colorpickersliders.js"></script>
 <script src="/js/master/ticketTypeAdd.js"></script>
+
 <%- contentFor('body') %>
+
 <div class="form-container">
-  <form method="post" class="p-3 bg-light-gray">
-    <div class="menu-group">
-      <%- include('../common/errorMessage') %>
-      <%- include('../common/successMessage') %>
-    </div>
+    <form method="post" class="p-3 bg-light-gray">
+        <div class="menu-group">
+            <%- include('../common/errorMessage') %>
+            <%- include('../common/successMessage') %>
+        </div>
 
-    <input type="hidden" name="id" value="<%= forms.id %>">
+        <input type="hidden" name="id" value="<%= forms.id %>">
 
-    <%- include('form', {forms: forms}) %>
+        <%- include('form', {forms: forms}) %>
 
-    <div class="form-group row">
-      <div class="btn-area panel-body">
-        <a class="btn btn-ok btn-primary">更新する</a>
-      </div>
-    </div>
-  </form>
+        <div class="btn-area panel-body">
+            <button type="button" class="btn btn-ok btn-primary">更新する</button>
+        </div>
+    </form>
 </div>
