### Changed - バージョン情報追加

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -19,7 +19,10 @@
             </div>
         </div>
     </div>
-    
+
+    <!-- /.content-wrapper -->
+
+    <%- include('./footer') %>
 
     <script>
         $(function () {
