### Added - 劇場編集を追加

--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -43,7 +43,7 @@ Aa-12
             <thead>
                 <tr>
                     <th>コード</th>
-                    <th>名称</th>
+                    <th>名称<br>英語名称<br>カナ</th>
                     <th>属性</th>
                     <th>座席購入上限数</th>
                     <th>販売開始日</th>
@@ -61,7 +61,7 @@ Aa-12
                         $kanaName$<br>
                     </td>
                     <td name="telephone">
-                        $telephone$
+                        <p>$telephone$</p>
                     </td>
                     <td name="offers.eligibleQuantity.maxValue">$offers.eligibleQuantity.maxValue$枚</td>
                     <td name="availabilityStartsGraceTimeInDays">$availabilityStartsGraceTimeInDays$日前</td>
